--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>INSURGÊNCIE</title>
+    <title>INSURGÊNCIA</title>
     <style>
         :root {
             --hero-red: #8B0000;
@@ -26,14 +26,13 @@
         }
 
         .landing-page {
-            height: 100vh;
+            min-height: 100vh;
             display: flex;
             flex-direction: column;
-            justify-content: center;
             align-items: center;
             position: relative;
-            background: linear-gradient(45deg, var(--hero-red), var(--insurgent-blue));
-            overflow: hidden;
+            background: var(--black);
+            padding: 2rem;
         }
 
         .title {
@@ -43,133 +42,190 @@
             position: relative;
             cursor: pointer;
             transition: all 0.3s ease;
+            margin-bottom: 2rem;
+            text-align: center;
+            text-shadow: 0 0 10px rgba(255, 255, 255, 0.5);
         }
 
         .title:hover {
             animation: glitch 0.3s infinite;
         }
 
-        .buttons {
-            margin-top: 2rem;
+        .content-container {
             display: flex;
+            width: 100%;
+            max-width: 1800px;
             gap: 2rem;
-        }
-
-        .btn {
-            padding: 1rem 2rem;
-            background: transparent;
-            border: 2px solid var(--glitch-white);
-            color: var(--glitch-white);
-            cursor: pointer;
             position: relative;
-            overflow: hidden;
-            transition: all 0.3s ease;
-        }
-
-        .btn:hover {
-            background: var(--glitch-white);
-            color: var(--black);
         }
 
         .section {
-            min-height: 100vh;
+            flex: 1;
             padding: 2rem;
-            display: none;
+            position: relative;
+            min-height: 80vh;
         }
 
         .heroes {
             background-color: var(--hero-red);
+            border-radius: 10px 0 0 10px;
+            box-shadow: 5px 0 15px rgba(139, 0, 0, 0.5);
         }
 
         .insurgents {
             background-color: var(--insurgent-blue);
+            border-radius: 0 10px 10px 0;
+            box-shadow: -5px 0 15px rgba(0, 0, 139, 0.5);
+        }
+
+        .section-title {
+            font-size: 2.5rem;
+            margin-bottom: 2rem;
+            text-align: center;
+            text-transform: uppercase;
+            position: relative;
+            padding-bottom: 1rem;
+        }
+
+        .section-title::after {
+            content: '';
+            position: absolute;
+            bottom: 0;
+            left: 50%;
+            transform: translateX(-50%);
+            width: 100px;
+            height: 3px;
+            background: var(--glitch-white);
         }
 
         .character-grid {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+            grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
             gap: 2rem;
-            padding: 2rem;
         }
 
         .character-card {
             background: rgba(0, 0, 0, 0.7);
             padding: 1.5rem;
             border-radius: 5px;
-            transition: transform 0.3s ease;
+            transition: all 0.3s ease;
+            border: 1px solid rgba(255, 255, 255, 0.1);
+            position: relative;
+            overflow: hidden;
+        }
+
+        .character-card::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: linear-gradient(45deg, transparent, rgba(255, 255, 255, 0.1), transparent);
+            transform: translateX(-100%);
+            transition: 0.5s;
         }
 
         .character-card:hover {
             transform: translateY(-5px);
+            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+        }
+
+        .character-card:hover::before {
+            transform: translateX(100%);
+        }
+
+        .character-card h3 {
+            font-size: 1.5rem;
+            margin-bottom: 1rem;
+            color: var(--glitch-white);
+            text-shadow: 0 0 5px rgba(255, 255, 255, 0.3);
+        }
+
+        .character-card p {
+            margin: 0.5rem 0;
+            line-height: 1.4;
+        }
+
+        .character-card strong {
+            color: var(--glitch-white);
+            text-shadow: 0 0 3px rgba(255, 255, 255, 0.2);
         }
 
         @keyframes glitch {
             0% {
                 transform: translate(0);
+                text-shadow: 0 0 10px rgba(255, 255, 255, 0.5);
             }
             20% {
                 transform: translate(-2px, 2px);
+                text-shadow: 2px 2px 10px rgba(255, 0, 0, 0.5);
             }
             40% {
                 transform: translate(-2px, -2px);
+                text-shadow: -2px -2px 10px rgba(0, 0, 255, 0.5);
             }
             60% {
                 transform: translate(2px, 2px);
+                text-shadow: 2px 2px 10px rgba(255, 0, 0, 0.5);
             }
             80% {
                 transform: translate(2px, -2px);
+                text-shadow: -2px -2px 10px rgba(0, 0, 255, 0.5);
             }
             100% {
                 transform: translate(0);
+                text-shadow: 0 0 10px rgba(255, 255, 255, 0.5);
             }
         }
 
-        .glitch-overlay {
-            position: fixed;
+        .divider {
+            position: absolute;
+            left: 50%;
             top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background: var(--black);
-            display: none;
-            justify-content: center;
-            align-items: center;
-            z-index: 1000;
+            bottom: 0;
+            width: 2px;
+            background: var(--glitch-white);
+            transform: translateX(-50%);
+            box-shadow: 0 0 10px rgba(255, 255, 255, 0.5);
         }
 
-        .glitch-text {
-            color: var(--glitch-white);
-            font-size: 2rem;
-            animation: glitch 0.3s infinite;
+        @media (max-width: 1200px) {
+            .content-container {
+                flex-direction: column;
+            }
+
+            .heroes, .insurgents {
+                border-radius: 10px;
+                margin-bottom: 2rem;
+            }
+
+            .divider {
+                display: none;
+            }
         }
     </style>
 </head>
 <body>
     <div class="landing-page">
-        <h1 class="title">INSURGÊNCIE</h1>
-        <div class="buttons">
-            <button class="btn" onclick="showSection('insurgents')">Ver Resistência</button>
-            <button class="btn" onclick="showSection('heroes')">Ver Heróis</button>
+        <h1 class="title">INSURGÊNCIA</h1>
+        <div class="content-container">
+            <div class="divider"></div>
+            <section class="section heroes">
+                <h2 class="section-title">Heróis</h2>
+                <div class="character-grid">
+                    <!-- Hero cards will be added here -->
+                </div>
+            </section>
+
+            <section class="section insurgents">
+                <h2 class="section-title">Resistência</h2>
+                <div class="character-grid">
+                    <!-- Insurgent cards will be added here -->
+                </div>
+            </section>
         </div>
     </div>
-
-    <div class="glitch-overlay">
-        <div class="glitch-text">ACESSO INTERDITADO / REALIDADE CORROMPIDA</div>
-    </div>
-
-    <section id="heroes" class="section heroes">
-        <h2>Heróis</h2>
-        <div class="character-grid">
-            <!-- Hero cards will be added here -->
-        </div>
-    </section>
-
-    <section id="insurgents" class="section insurgents">
-        <h2>Resistência</h2>
-        <div class="character-grid">
-            <!-- Insurgent cards will be added here -->
-        </div>
-    </section>
 
     <script>
         const heroes = [
@@ -262,22 +318,8 @@
         }
 
         function populateSections() {
-            document.querySelector('#heroes .character-grid').innerHTML = heroes.map(createCharacterCard).join('');
-            document.querySelector('#insurgents .character-grid').innerHTML = insurgents.map(createCharacterCard).join('');
-        }
-
-        function showSection(sectionId) {
-            const overlay = document.querySelector('.glitch-overlay');
-            overlay.style.display = 'flex';
-            
-            setTimeout(() => {
-                document.querySelector('.landing-page').style.display = 'none';
-                document.querySelectorAll('.section').forEach(section => {
-                    section.style.display = 'none';
-                });
-                document.getElementById(sectionId).style.display = 'block';
-                overlay.style.display = 'none';
-            }, 1000);
+            document.querySelector('.heroes .character-grid').innerHTML = heroes.map(createCharacterCard).join('');
+            document.querySelector('.insurgents .character-grid').innerHTML = insurgents.map(createCharacterCard).join('');
         }
 
         // Initialize the page
