--- a/index.html
+++ b/index.html
@@ -269,7 +269,8 @@
     <script>
         const heroes = [
             {
-                name: "Paladin",
+                name: "Chris Kyle",
+                title: "Águia Branca",
                 powers: "Superforça, invulnerabilidade",
                 age: 42,
                 description: "Líder do grupo. Adorado pela mídia, mas com um passado repleto de massacres encobertos.",
@@ -277,7 +278,8 @@
                 image: "https://i.imgur.com/JQKqX5Y.jpg"
             },
             {
-                name: "Lumina",
+                name: "Osmond Kelly",
+                title: "Netuno",
                 powers: "Manipulação de luz, cega inimigos",
                 age: 28,
                 description: "Ícone fashion e heroína pop. Usa os poderes para vigilância totalitária.",
@@ -285,7 +287,8 @@
                 image: "https://i.imgur.com/8XZQY5Y.jpg"
             },
             {
-                name: "Torque",
+                name: "Paul Ekman",
+                title: "Gashlight",
                 powers: "Velocidade extrema",
                 age: 34,
                 description: "Faz missões secretas de eliminação. Seus rastros são sempre apagados.",
@@ -293,7 +296,8 @@
                 image: "https://i.imgur.com/L2XZQ5Y.jpg"
             },
             {
-                name: "Mirage",
+                name: "Teresa d'Avila",
+                title: "Miss Poltergeist",
                 powers: "Ilusões mentais e controle emocional",
                 age: 39,
                 description: "Manipula a opinião pública e interfere em protestos com ilusões de paz.",
@@ -301,20 +305,13 @@
                 image: "https://i.imgur.com/M3XZQ5Y.jpg"
             },
             {
-                name: "Aegis",
+                name: "Senni Salminem",
+                title: "Gepard",
                 powers: "Campo de força impenetrável",
                 age: 50,
                 description: "Segurança pessoal do presidente e censor de comunicação.",
                 icon: "fa-shield",
                 image: "https://i.imgur.com/N4XZQ5Y.jpg"
-            },
-            {
-                name: "Nova Prime",
-                powers: "Manipulação de energia nuclear",
-                age: 26,
-                description: "Jovem prodígio criada em laboratório. Arma de destruição em massa disfarçada de heroína.",
-                icon: "fa-atom",
-                image: "https://i.imgur.com/O5XZQ5Y.jpg"
             }
         ];
 
@@ -375,6 +372,7 @@
                     <img src="${character.image}" alt="${character.name}" class="character-image">
                     <i class="fa-solid ${character.icon} character-icon"></i>
                     <h3>${character.name}</h3>
+                    <p class="character-title"><strong>Trajado:</strong> ${character.title}</p>
                     <p><strong>Poderes:</strong> ${character.powers}</p>
                     <p><strong>Idade:</strong> ${character.age}</p>
                     <p>${character.description}</p>
