--- a/index.html
+++ b/index.html
@@ -25,10 +25,15 @@
             background-color: var(--black);
             color: var(--glitch-white);
             overflow-x: hidden;
-            background-image: 
-                linear-gradient(45deg, rgba(139, 0, 0, 0.1) 25%, transparent 25%),
-                linear-gradient(-45deg, rgba(0, 0, 139, 0.1) 25%, transparent 25%);
-            background-size: 60px 60px;
+            background:
+                linear-gradient(45deg, rgba(139, 0, 0, 0.12) 25%, transparent 25%),
+                linear-gradient(-45deg, rgba(0, 0, 139, 0.12) 25%, transparent 25%),
+                linear-gradient(rgba(0,0,0,0.7), rgba(0,0,0,0.7)),
+                url('images/bg.jpg');
+            background-size: 60px 60px, 60px 60px, cover, cover;
+            background-blend-mode: lighten, lighten, multiply, normal;
+            background-position: center center, center center, center center, center center;
+            background-repeat: repeat, repeat, no-repeat, no-repeat;
         }
 
         .landing-page {
