--- a/index.html
+++ b/index.html
@@ -88,10 +88,20 @@
 
         .heroes {
             border: 2px solid var(--hero-red);
+            background:
+                linear-gradient(rgba(0,0,0,0.82), rgba(0,0,0,0.82)),
+                url('images/bg-herois.jpg');
+            background-size: cover;
+            background-position: center;
         }
 
         .insurgents {
             border: 2px solid var(--insurgent-blue);
+            background:
+                linear-gradient(rgba(0,0,0,0.82), rgba(0,0,0,0.82)),
+                url('images/bg-resistencia.jpg');
+            background-size: cover;
+            background-position: center;
         }
 
         .section-title {
