--- a/index.html
+++ b/index.html
@@ -25,6 +25,14 @@
             background-color: var(--black);
             color: var(--glitch-white);
             overflow-x: hidden;
+            position: relative;
+            z-index: 0;
+        }
+        body::before {
+            content: '';
+            position: fixed;
+            top: 0; left: 0; right: 0; bottom: 0;
+            z-index: -1;
             background:
                 linear-gradient(45deg, rgba(139, 0, 0, 0.12) 25%, transparent 25%),
                 linear-gradient(-45deg, rgba(0, 0, 139, 0.12) 25%, transparent 25%),
@@ -34,6 +42,7 @@
             background-blend-mode: lighten, lighten, multiply, normal;
             background-position: center center, center center, center center, center center;
             background-repeat: repeat, repeat, no-repeat, no-repeat;
+            filter: blur(6px) brightness(0.9);
         }
 
         .landing-page {
@@ -84,6 +93,33 @@
             backdrop-filter: blur(10px);
             background: rgba(0, 0, 0, 0.8);
             box-shadow: 0 0 30px rgba(0, 0, 0, 0.5);
+        }
+
+        .heroes, .insurgents {
+            position: relative;
+            overflow: hidden;
+        }
+        .heroes::before, .insurgents::before {
+            content: '';
+            position: absolute;
+            top: 0; left: 0; right: 0; bottom: 0;
+            z-index: 0;
+            pointer-events: none;
+            opacity: 0.15;
+            border-radius: 20px;
+            background: radial-gradient(circle at 60% 40%, #fff 0%, transparent 70%) ,
+                        linear-gradient(120deg, rgba(255,255,255,0.12) 0%, transparent 100%);
+            animation: caixaGlow 8s ease-in-out infinite alternate;
+        }
+        @keyframes caixaGlow {
+            0% {
+                opacity: 0.10;
+                filter: blur(0px);
+            }
+            100% {
+                opacity: 0.22;
+                filter: blur(2px);
+            }
         }
 
         .heroes {
