--- a/index.html
+++ b/index.html
@@ -76,10 +76,10 @@
         }
 
         .content-container {
-            display: grid;
-            grid-template-columns: 1fr 1fr;
+            display: flex;
+            flex-direction: column;
             width: 100%;
-            max-width: 1800px;
+            max-width: 1200px;
             gap: 3rem;
             position: relative;
             padding: 2rem;
