--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
             --gold: #FFD700;
         }
 
+        html {
+            scroll-behavior: smooth;
+        }
+
         * {
             margin: 0;
             padding: 0;
@@ -52,6 +56,7 @@
             align-items: center;
             position: relative;
             padding: 2rem;
+            margin-left: 90px;
         }
 
         .title {
@@ -259,20 +264,93 @@
                 text-shadow: 0 0 10px rgba(255, 255, 255, 0.5);
             }
         }
+
+        /* SIDEBAR */
+        .sidebar-nav {
+            position: fixed;
+            top: 0;
+            left: 0;
+            height: 100vh;
+            width: 90px;
+            background: rgba(0,0,0,0.85);
+            border-right: 2px solid var(--glitch-white);
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            padding-top: 2rem;
+            z-index: 10;
+            box-shadow: 2px 0 20px 0 rgba(0,0,0,0.4);
+        }
+        .sidebar-nav .nav-btn {
+            width: 60px;
+            height: 60px;
+            margin-bottom: 2rem;
+            border: none;
+            border-radius: 50%;
+            background: linear-gradient(135deg, var(--hero-red) 60%, var(--insurgent-blue) 100%);
+            color: var(--glitch-white);
+            font-size: 1.6rem;
+            font-weight: bold;
+            cursor: pointer;
+            transition: box-shadow 0.2s, transform 0.2s;
+            box-shadow: 0 2px 10px rgba(0,0,0,0.3);
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            outline: none;
+        }
+        .sidebar-nav .nav-btn.heroes-btn {
+            background: linear-gradient(135deg, var(--hero-red) 60%, #222 100%);
+        }
+        .sidebar-nav .nav-btn.insurgents-btn {
+            background: linear-gradient(135deg, var(--insurgent-blue) 60%, #222 100%);
+        }
+        .sidebar-nav .nav-btn span {
+            font-size: 0.85rem;
+            margin-left: 0.5rem;
+        }
+        .sidebar-nav .nav-btn:hover {
+            box-shadow: 0 4px 20px 2px var(--glitch-white);
+            transform: scale(1.08);
+        }
+        @media (max-width: 900px) {
+            .sidebar-nav {
+                width: 60px;
+                padding-top: 1rem;
+            }
+            .sidebar-nav .nav-btn {
+                width: 40px;
+                height: 40px;
+                font-size: 1.1rem;
+            }
+        }
+        @media (max-width: 900px) {
+            .landing-page {
+                margin-left: 60px;
+            }
+        }
     </style>
 </head>
 <body>
+    <nav class="sidebar-nav">
+        <button class="nav-btn heroes-btn" onclick="scrollToSection('heroes')" title="Heróis">
+            <i class="fa-solid fa-shield-halved"></i>
+        </button>
+        <button class="nav-btn insurgents-btn" onclick="scrollToSection('insurgents')" title="Resistência">
+            <i class="fa-solid fa-user-ninja"></i>
+        </button>
+    </nav>
     <div class="landing-page">
         <h1 class="title">INSURGÊNCIA</h1>
         <div class="content-container">
-            <section class="section heroes">
+            <section class="section heroes" id="heroes">
                 <h2 class="section-title">Heróis</h2>
                 <div class="character-grid">
                     <!-- Hero cards will be added here -->
                 </div>
             </section>
 
-            <section class="section insurgents">
+            <section class="section insurgents" id="insurgents">
                 <h2 class="section-title">Resistência</h2>
                 <div class="character-grid">
                     <!-- Insurgent cards will be added here -->
@@ -411,6 +489,13 @@
 
         // Initialize the page
         populateSections();
+
+        function scrollToSection(sectionId) {
+            const section = document.getElementById(sectionId);
+            if(section) {
+                section.scrollIntoView({ behavior: 'smooth' });
+            }
+        }
     </script>
 </body>
 </html> 
