--- a/index.html
+++ b/index.html
@@ -334,10 +334,10 @@
 <body>
     <nav class="sidebar-nav">
         <button class="nav-btn heroes-btn" onclick="scrollToSection('heroes')" title="Heróis">
-            <i class="fa-solid fa-shield-halved"></i>
+            <span>HR</span>
         </button>
         <button class="nav-btn insurgents-btn" onclick="scrollToSection('insurgents')" title="Resistência">
-            <i class="fa-solid fa-user-ninja"></i>
+            <span>RS</span>
         </button>
     </nav>
     <div class="landing-page">
