--- a/index.html
+++ b/index.html
@@ -287,23 +287,24 @@
             margin-bottom: 2rem;
             border: none;
             border-radius: 50%;
-            background: linear-gradient(135deg, var(--hero-red) 60%, var(--insurgent-blue) 100%);
+            background: rgba(0,0,0,0.25);
             color: var(--glitch-white);
             font-size: 1.6rem;
             font-weight: bold;
             cursor: pointer;
-            transition: box-shadow 0.2s, transform 0.2s;
+            transition: box-shadow 0.2s, transform 0.2s, background 0.2s;
             box-shadow: 0 2px 10px rgba(0,0,0,0.3);
             display: flex;
             align-items: center;
             justify-content: center;
             outline: none;
+            backdrop-filter: blur(8px);
         }
         .sidebar-nav .nav-btn.heroes-btn {
-            background: linear-gradient(135deg, var(--hero-red) 60%, #222 100%);
+            /* Mantém o fundo glassmorphism */
         }
         .sidebar-nav .nav-btn.insurgents-btn {
-            background: linear-gradient(135deg, var(--insurgent-blue) 60%, #222 100%);
+            /* Mantém o fundo glassmorphism */
         }
         .sidebar-nav .nav-btn span {
             font-size: 0.85rem;
